# SATExpander

./: README.md  pyproject.toml
sample/: perfect_matching.py  readme_sample.py
sat_expander/: CNF.py  ExclusionPredicates.py  Functions.py  LogicalOperator.py  LogicalOperatorContext.py
src/sat_expander/: Functions.py  LogicalOperator.py  QuantorContext.py  Quantors.py
test/: test_cnf.py  test_exclusion_predicates.py  test_function.py  test_quantor.py  test_scenarios.py
